syntax = "proto3";

package laracom.service.user;

service UserService {
    rpc Create(User) returns (Response) {}
    rpc Get(User) returns (Response) {}
    rpc GetAll(Request) returns (Response) {}
    rpc Auth(User) returns (Token){}
    rpc ValidateToken(Token) returns (Token){}
    rpc Update(User) returns (Response){}
    rpc CreatePasswordReset(PasswordReset) returns (PasswordResetResponse) {}
    rpc ValidatePasswordResetToken(Token) returns (Token){}
    rpc DeletePasswordReset(PasswordReset) returns (PasswordResetResponse) {}
    rpc GetById(User) returns (Response) {}
}

message User {
    string id = 1;
    string name = 2;
    string email = 3;
    string password = 4;
    string status = 5;
    string stripe_id = 6;
    string card_brand = 7;
    string card_last_four = 8;
    string trial_ends_at = 9;
    string deleted_at = 10;
    string remember_token = 11;
    string created_at = 12;
    string updated_at = 13;
}

message Request {}

message Response {
    User user = 1;
    repeated User users = 2;
    repeated Error errors = 3;
}
message Token {
    string token = 1;
    bool valid = 2;
    repeated Error errors = 3;
}
message Error {
    int32 code = 1;
    string description = 2;
}
message PasswordReset{
    string email = 1;
    string token = 2;
    string created_at = 3;
}

message PasswordResetResponse{
    PasswordReset passwordReset = 1;
    repeated Error errors = 2;
}